--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <input type="text" placeholder="플레이어 4 이름" id="player4">
         <input type="text" placeholder="플레이어 5 이름" id="player5">
         <input type="text" placeholder="플레이어 6 이름" id="player6">
+        <button id="savePlayers">이름 저장</button>
     </div>
 
-    <div id="score-input">
+    <div id="score-input" style="display: none;">
         <h2>스코어 입력</h2>
         <table>
             <thead>
@@ -83,7 +84,7 @@
         </table>
     </div>
 
-    <button id="submit">제출</button>
+    <button id="submit" style="display: none;">제출</button>
     <h2>결과</h2>
     <div id="results"></div>
 
