--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>골프 스코어 입력</h1>
-
+<button id="save-scores">저장하기</button>
     <div id="score-input">
         <h2>스코어 입력</h2>
         <table>
