--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     <h1>골프 스코어 입력</h1>
-<button id="save-scores">저장하기</button>
     <div id="score-input">
         <h2>스코어 입력</h2>
         <table>
@@ -33,7 +32,7 @@
                 <script>
                     for (let i = 1; i <= 18; i++) {
                         document.write(`<tr>
-                            <td>${i}</td>
+                            <td>${i}홀 <button id="save-scores">저장하기</button></td>
                             <td>
                                 <button class="score-button" data-hole="${i}" data-player="0" onclick="updateScore(this, -1)">-1</button>
                                 <span class="score-display" data-hole="${i}" data-player="0">0</span>
