--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <script src="script.js"></script>
     <script>
-        const API_URL = 'http://localhost:5000/api/scores'; // 서버 URL
+        const API_URL = 'https://yongsihem.github.io/golfscore/scores'; // 서버 URL
 
         // 점수 저장 함수
         async function saveScores() {
