--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>골프 스코어 입력</h1>
+    <h1>골프 스코어 입력(v0.1-offline)</h1>
 
     <div id="score-input">
         <h2>스코어 입력</h2>
